--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="scores">
             <div class="title">
                 <h2>Recent scores</h2>
-                <button>Refresh</button>
+                <button type="button">Refresh</button>
             </div>
             <div class="results">
 
@@ -24,7 +24,7 @@
             <h2>Add your scoore</h2>
             <input type="text" placeholder="Your name" id="name" required>
             <input type="text" placeholder="Your score" id="score" required>
-            <button id="scoreBtn">Submit</button>
+            <button type="button" id="scoreBtn">Submit</button>
         </div>
     </div>
     <script type="module" src="./index.js" ></script>
