--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,30 @@
     <h1>Leaderboard</h1>
     <div class="main">
         <div class="scores">
-            <div class="title">
-                <h2>Recent scores</h2>
-                <button type="button" id="refresh">Refresh</button>
-            </div>
             <div class="results">
-
+                <div class="title">
+                    <h2>Recent scores</h2>
+                    <button type="button" id="refresh">Refresh</button>
+                </div>
+                <table class="table">
+                    <tr class="first">
+                        <th>Name</th>
+                        <th>Score</th>
+                    </tr>
+                    <div class="container">
+                    </div>
+                </table>
             </div>
+
         </div>
         <div class="form">
-            <h2>Add your scoore</h2>
+            <div class="h2-form">
+                <h2>Add your scoore</h2>
+            </div>
             <input type="text" placeholder="Your name" id="name" required>
-            <input type="text" placeholder="Your score" id="score" required>
+            <span></span>
+            <input type="number" placeholder="Your score" id="score" required>
+            <span></span>
             <button type="button" id="scoreBtn">Submit</button>
         </div>
     </div>
